--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
     <style>
       .footer {
         display: flex;
-        justify-content: space-between;
+        position: absolute;
+        z-index: 2;
+        top: 0;
+      }
+
+      .footer > div {
+        padding: 5px;
+        margin-right: 5px;
+        background-color: white;
       }
     </style>
   </body>
