--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       // Optional frames per second argument
       const stream = canvas.captureStream(25);
       
-      const options = { mimeType: 'video/webp' };
+      const options = { mimeType: 'video/webm' };
 
       function startRec() {
         let recorder = new MediaRecorder(stream, options);
