--- a/index.html
+++ b/index.html
@@ -57,12 +57,10 @@
       const stopButton = document.getElementById('stopButton');
       const downloadButton = document.getElementById('downloadButton');
 
-      downloadButton.href = canvas;
-
       startButton.addEventListener('click', function () {
         startRec().then(recordedChunks => {
           let recordedBlob = new Blob(recordedChunks, { type: 'video/mp4' });
-          downloadButton.href = `${location.origin}/${URL.createObjectURL(recordedBlob)}`;
+          downloadButton.href = URL.createObjectURL(recordedBlob);
           downloadButton.download = 'RecordedVideo.mp4';
         });
       }, false);
