--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       startButton.addEventListener('click', function () {
         startRec().then(recordedChunks => {
           let recordedBlob = new Blob(recordedChunks, { type: 'video/webm' });
-          const a = createElement('a');
+          const a = document.createElement('a');
           a.style.display = 'none';
           a.href = URL.createObjectURL(recordedBlob);
           a.download = 'RecordedVideo.webm';
